--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: my notes
+name: My notes
 
 # Name of the author
 author: Chew
 
 # Short bio or description (displayed in the header)
-description: My notes on my computing journey
+description: On my computing journey
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/avatar-chew.png
