--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ author: Chew
 description: On my computing journey
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: /images/enso-circle-color.jpg 
+avatar: /images/enso-circle-color.png
 
 #
 # Flags below are optional
