added comments to changes made in config

--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,9 @@ footer-links:
   googleplus: # anything in your profile username that comes after plus.google.com/
   playconsole:
 
+# allow jekyll to show "future" posts due to timezone difference.
 future: true
+
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
 disqus: 
